Attempt at using ProcessBuilder to build a proccess